Upgrades, checking compatibility with upcoming Groovy 6